--- a/docs/changelogs/2206.01.md
+++ b/docs/changelogs/2206.01.md
@@ -8,4 +8,4 @@
 - 向机器人发送 `/start` 指令时，Bot 发送的欢迎消息中将会提供直接邀请机器人的按钮。
 
 ## 已知问题
-- 可能会遇到加入群的时候无法收到 Bot 的私聊消息（无论之前是否启用 Bot）。这可能是 Telegram Bot 服务器的相关 bug，我们会继续关注相关的反馈和问题。
+- 可能会遇到加入群的时候无法收到 Bot 的私聊消息（无论之前是否启用 Bot）。这可能是 Telegram Bot 服务器的相关 bug，我们会继续关注相关的反馈。
