--- a/docs/changelogs/2206.01.md
+++ b/docs/changelogs/2206.01.md
@@ -3,9 +3,13 @@
 ## 更新时间
 2022 年 6 月 24 日
 
-## 更新内容
+## Bot 代码更新内容
 - 为公开群组使用修改部分反馈措辞和文案。
 - 向机器人发送 `/start` 指令时，Bot 发送的欢迎消息中将会提供直接邀请机器人的按钮。
+
+## 服务器端更新内容
+- 服务器整体迁移至腾讯云香港。
+- 使用新的域名。
 
 ## 已知问题
 - 可能会遇到加入群的时候无法收到 Bot 的私聊消息（无论之前是否启用 Bot）。这可能是 Telegram Bot 服务器的相关 bug，我们会继续关注相关的反馈。
