Swap two language files

--- a/docs/zh/changelogs/2208.02.md
+++ b/docs/zh/changelogs/2208.02.md
@@ -1,8 +1,8 @@
-# Version 2208.02
+# 2208.02 更新
 
-## Update Date
-24th August 2022
+## 更新日期
+2022 年 8 月 23 日
 
-## Updates Inside the Source Code
-- Fixed a problem that Telegram Watchdog will apply wrong fallback language when user uses a language is not being supported.
-- Fixed some glitches when using Promise inside the code.
+## Bot 代码更新内容
+- 修复用户使用不支持的语言时，Telegram Watchdog 的语言回落选项不正确之误。
+- 修复代码中对 Promise 使用的谬误。
